2002-12-23  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (output_a_shift): Remove unused code.

2002-12-22  Mark Mitchell  <mark@codesourcery.com>

	* stor-layout.c (update_alignment_for_field): Guard use of
	ADJUST_FIELD_ALIGN with #ifdef.

	* stor-layout.c (update_alignment_for_field): Use
	ADJUST_FIELD_ALIGN when computing the alignment for a zero-width
	bitfield when PCC_BITFIELD_TYPE_MATTERS.

2002-12-22  Kazu Hirata  <kazu@cs.umass.edu>

	* genautomata.c: Fix comment typos.

Sun Dec 22 18:23:44 CET 2002  Jan Hubicka  <jh@suse.cz>

	* params.def (tracer-min-branch-probability-feedback): Fix default.
	* final.c (compute_alignments): Use profile to avoid code bloat.

2002-12-22  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (get_shift_alg): Make shift insn
	sequences end with a valid cc0 whenever possible.

2002-12-22  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (negsf2): New.
	(*negsf2_h8300): Likewise.
	(*negsf2_h8300hs): Likewise.

2002-12-21  Geoffrey Keating  <geoffk@apple.com>

	* integrate.c (output_inline_function): Don't hold private
	pointers to 'struct function' over GC calls.

2002-12-21  Kaz kojima  <kkojima@gcc.gnu.org>

	* config/sh/lib1funcs.asm (__fpscr_values): Conditionalize with
	NO_FPSCR_VALUES.
	* config/sh/t-linux (TARGET_LIBGCC2_CFLAGS): Add -DNO_FPSCR_VALUES.

2002-12-21  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (zero_extendqisi2): Correct the
	length.

2002-12-21  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (*zero_extendqihi2_h8300): Make the
	second alternative "#".
	(*zero_extendqihi2_h8300hs): Likewise.
	(a define_split): New.

2002-12-21  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300-protos.h: Update the prototype for
	split_adds_subs.
	Add prototypes for const_le_2_operand and const_le_6_operand.
	* config/h8300/h8300.c (split_adds_subs): Add an argument to
	specify whether inc/dec should be used when possible.
	(const_le_2_operand): New.