@@ -1,3 +1,10 @@
+2002-12-22  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* tree.c (save_expr): Allow either side of a dyadic operand to be
+	constant.
+
+	* doc/portability.texi (portability): Update portability goals.
+
 2002-12-23  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.c (output_a_shift): Remove unused code.
